--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,74 @@
-$primary-color: #444;
+@import "config";
+
+* {
+  box-sizing: border-box;
+  }
 
 body {
+  @include background;
   background: $primary-color;
   color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva,
+               Verdana, sans-serif;
+  height: 100%;
+  line-height: 1.5;
+  margin: 0;
+  }
+
+// Headings
+h1,
+h2,
+h3 {
+  font-weight: 400;
+  margin: 0;
+
+  &.lg-heading {
+    font-size: 6rem;
+    }
+
+  &.sm-heading {
+    background: rgba(lighten($primary-color, 2), 0.5);
+    margin-bottom: 2rem;
+    padding: .2rem 1rem;
+    }
+  }
+
+a {
+  color: #fff;
+  text-decoration: none;
+  }
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  }
+
+.text-secondary {
+  color: $secondary-color;
+  }
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+        }
+      }
+    }
+
+    &#home {
+      overflow: hidden;
+      h1{
+        margin-top: 20vh;
+        }
+      }
   }
