--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,19 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 * {
   box-sizing: border-box;
-  }
+}
 
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
-  font-family: 'Segoe UI', Tahoma, Geneva,
-               Verdana, sans-serif;
+  color: set-text-color($primary-color);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   height: 100%;
   line-height: 1.5;
   margin: 0;
-  }
+}
 
 // Headings
 h1,
@@ -26,34 +24,34 @@ h3 {
 
   &.lg-heading {
     font-size: 6rem;
-    }
+  }
 
   &.sm-heading {
     background: rgba(lighten($primary-color, 2), 0.5);
     margin-bottom: 2rem;
-    padding: .2rem 1rem;
-    }
+    padding: 0.2rem 1rem;
   }
+}
 
 a {
   color: #fff;
   text-decoration: none;
-  }
+}
 
 header {
   position: fixed;
   z-index: 2;
   width: 100%;
-  }
+}
 
 .text-secondary {
   color: $secondary-color;
-  }
+}
 
 main {
   padding: 4rem;
-  height: 100%;
-
+  //height: 100%;
+  min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
 
@@ -63,14 +61,63 @@ main {
       &:hover {
         color: $secondary-color;
         @include easeOut();
-        }
       }
     }
-
-    &#home {
-      overflow: hidden;
-      h1{
-        margin-top: 20vh;
-        }
-      }
   }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
+}
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+  }
+
+@import "mobile";
