--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -2,14 +2,14 @@
 @include mediaXl {
   .projects {
     grid-template-columns: repeat(4, 1fr);
-    }
+  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
   .projects {
     grid-template-columns: repeat(3, 1fr);
-    }
+  }
 }
 
 // Tablets & Small Laptops
@@ -37,45 +37,53 @@
 
   .menu-nav {
     height: 75vh;
-    transform: translate3d(-100%,0,0);
+    transform: translate3d(-100%, 0, 0);
     font-size: 24px;
-    }
+  }
 
   .menu-branding {
     height: 25vh;
-    transform: translate3d(100%, 0,0);
+    transform: translate3d(100%, 0, 0);
 
     //noinspection CssUnknownTarget
     .portrait {
       background: url("../img/paul1_sm.jpg");
       width: 150px;
       height: 150px;
-      }
     }
-  
+  }
+
   .about-info {
-    grid-template-areas: 
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
+    grid-template-areas:
+   'bioimage'
+   'bio'
+   'job1'
+   'job2'
+   'job3';
 
     grid-template-columns: 1fr;
-    }
+  }
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
-    }
+  }
 }
 
 // Smart phones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
   }
 
   .projects {
     grid-template-columns: 1fr;
-    }
+  }
 }
